unpackaged/main/default/objects/Lot__c/Lot__c.object-meta.xml
<CustomObject>
    <label>Lot</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>