unpackaged/main/default/objects/Lot__c/fields/Assigned_Model__c.field-meta.xml
<CustomField>
        <fullName>Assigned_Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assigned Model</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The model should belong to the parent subdivision of the lot.</errorMessage>
            <filterItems>
                <field>Model__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </CustomField>