unpackaged/main/default/objects/Lot__c/fields/Base_Model_Price_Override__c.field-meta.xml
<CustomField>
        <fullName>Base_Model_Price_Override__c</fullName>
        <label>Base Model Price Override</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>