unpackaged/main/default/objects/Lot__c/fields/Info__c.field-meta.xml
<CustomField>
        <fullName>Info__c</fullName>
        <formula>TEXT(Type__c)+' / '+ Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </CustomField>