unpackaged/main/default/objects/Lot__c/fields/Preconfigured_Options_Amount__c.field-meta.xml
<CustomField>
        <fullName>Preconfigured_Options_Amount__c</fullName>
        <label>Preconfigured Options Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>