unpackaged/main/default/objects/Lot__c/fields/Premium__c.field-meta.xml
<CustomField>
        <fullName>Premium__c</fullName>
        <label>Premium</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>