unpackaged/main/default/objects/Lot__c/fields/Released_for_Construction__c.field-meta.xml
<CustomField>
        <fullName>Released_for_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Released for Construction</description>
        <label>Released for Construction</label>
        <type>Checkbox</type>
    </CustomField>