unpackaged/main/default/objects/Lot__c/fields/Released_for_Sale__c.field-meta.xml
<CustomField>
        <fullName>Released_for_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Released for Sale</description>
        <label>Released for Sale</label>
        <type>Checkbox</type>
    </CustomField>