unpackaged/main/default/objects/Lot__c/fields/Street_Address__c.field-meta.xml
<CustomField>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>