unpackaged/main/default/objects/Lot__c/fields/Subdivision__c.field-meta.xml
<CustomField>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subdivision</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>