unpackaged/main/default/objects/Lot__c/fields/Total_Price__c.field-meta.xml
<CustomField>
        <fullName>Total_Price__c</fullName>
        <formula>IF( (TEXT(Type__c) =='Spec' || TEXT(Type__c) =='Model'), Assigned_Model__r.Price__c + Price__c + Premium__c + Preconfigured_Options_Amount__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>