unpackaged/main/default/objects/Lot__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Spec</fullName>
                </value>
                <value>
                    <fullName>Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>