unpackaged/main/default/objects/Lot__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Released_for_Sale__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Status__c</columns>
        <columns>Street_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>